--- a/res/css/main.css
+++ b/res/css/main.css
@@ -25,3 +25,10 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+main {
+    /* Navbar edit */
+    width: calc(100vw - 5rem);
+    margin-left: 5rem;
+    height: 100%;
+}
