--- a/res/css/main.css
+++ b/res/css/main.css
@@ -19,6 +19,7 @@ body {
     transition: 0;
     font-size: 100%;
     font-family: "Inter";
+    scroll-behavior: smooth;
     color: var(--text-color);
     background-color: var(--background-color);
 }
