--- a/res/css/main.css
+++ b/res/css/main.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     left: 0;
     margin: 0;
-    padding: 0;
+    padding: 2rem;
     width: 100%;
     height: 100%;
     transition: 0;
