New slides concept

--- a/res/css/main.css
+++ b/res/css/main.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     left: 0;
     margin: 0;
-    padding: 2rem;
+    padding: 0;
     width: 100%;
     height: 100%;
     transition: 0;
@@ -22,6 +22,10 @@ body {
     scroll-behavior: smooth;
     color: var(--text-color);
     background-color: var(--background-color);
+}
+
+main {
+    min-height: 100vh;
 }
 
 * {
